# qbtui

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: keys.md
src/: api.rs  app.rs  humanize.rs  main.rs  model.rs  ui.rs
src/handlers/: categories.rs  dialog.rs  error.rs  files.rs  help.rs  info.rs  mod.rs  notification.rs  search.rs  sort.rs  torrents.rs
